<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".sitioTuristico">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="10dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ExtraText"
        android:layout_marginTop="15dp"

        android:layout_marginBottom="15dp">

        <ImageView
            android:id="@+id/pictureImageView"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/c1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/gilroy_bold"
                android:gravity="center"
                android:text="@string/nombre_poi" />
            <TextView
                android:id="@+id/textView_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/gilroy_light"
                android:text="@string/castillo_descripcion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.424"
                app:layout_constraintStart_toEndOf="@+id/pictureImageView"
                app:layout_constraintTop_toBottomOf="@+id/textView_titulo" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewPuntaje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/gilroy_bold"
                    android:text="@string/calificacionfix" />

                <RatingBar
                    android:id="@+id/ratingBar2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:numStars="5"
                    android:theme="@style/RatingBar"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>